ADD AntBlazor - not working

--- a/rsurl_dotNET/rsurl_frontend/appsettings.json
+++ b/rsurl_dotNET/rsurl_frontend/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform 
@@ -10,5 +10,21 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProSettings": {
+    "NavTheme": "dark",
+    "Layout": "side",
+    "ContentWidth": "Fluid",
+    "FixedHeader": false,
+    "FixSiderbar": true,
+    "Title": "Ant Design Pro",
+    "PrimaryColor": "daybreak",
+    "ColorWeak": false,
+    "SplitMenus": false,
+    "HeaderRender": true,
+    "FooterRender": true,
+    "MenuRender": true,
+    "MenuHeaderRender": true,
+    "HeaderHeight": 48
+  }
 }
