--- a/rsurl_rust_shortener/Cargo.toml
+++ b/rsurl_rust_shortener/Cargo.toml
@@ -5,4 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "rsurl_shortener_backend"
+path = "src/main.rs"
+
 [dependencies]
+rocket = "0.4.10"
+rocket_codegen = "0.4.10"
+harsh = "*"
