--- a/rsurl_rust_shortener/Cargo.toml
+++ b/rsurl_rust_shortener/Cargo.toml
@@ -10,6 +10,13 @@ name = "rsurl_shortener_backend"
 path = "src/main.rs"
 
 [dependencies]
-rocket = "0.4.10"
-rocket_codegen = "0.4.10"
-harsh = "*"
+actix-web = "3"
+nanoid = "0.4.0"
+url = "2.2.2"
+serde = "*"
+futures = "0.3"
+
+[dependencies.mongodb]
+version = "2.0.2"
+default-features = false
+features = ["async-std-runtime"]
