--- a/rsurl_dotNET/rsurl_mublazor_frontend/rsurl_mublazor_frontend.csproj
+++ b/rsurl_dotNET/rsurl_mublazor_frontend/rsurl_mublazor_frontend.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+    <PackageReference Include="MudBlazor" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
